
  - Key bindings can be modified in any rc file or interactively using
    the `global-set-key' function.  See notes in `system-gschemrc' for
    examples.

* `gschem' now displays help files and component documentation on all
  platforms, including Windows.  The `locate' tool is no longer used
  to search for component documentation files.

* The `bom' and `bom2' backends to `gnetlist' now give error messages
  if no attribute file can be found.  The `-O attrib_file=FILE' and
  `-O attribs=ATTRIB,ATTRIB...' options have also been added.

* A new `ewnet' backend has been added to `gnetlist'.  This outputs
  netlists for use with the National Instruments ULTIboard layout
  tool.

* The `verilog' backend to `gnetlist' now supports concatenated net
  naming like "{a,b,c[3:0]}".

* `gsch2pcb' no longer supports the `m4_command' parameter in project
  files.

* The `--m4-pcbdir' and `--m4-file' arguments to `gsch2pcb' now work
  again.

Notable changes in gEDA/gaf 1.7.1
=================================

* gEDA is now compatible with Guile 2.0.

* gEDA/gaf applications no longer complain when trying to load an rc
  file twice, or when an rc file doesn't exist.

* `gschem' allows objects to be moved by dragging without having to
  select them first.

* `gschem' now supports keybindings with more than one modifier key,
  and "Deselect" is bound to <Control Shift A> by default.

* `gnetlist' correctly handles multiple renames of the same net.  This
  resolves some long-standing bugs with multipage schematics.

* The `spice-sdb' backend for `gnetlist' now has built-in support for
  `SUBCKT_NMOS' and `SUBCKT_PMOS' devices.

* A new `makedepend' backend has been added to `gnetlist'.  It
  generates Makefile code for SPICE simulation dependencies.

* Visibility of embedded component attributes are now preserved by
  `gattrib'.

* `gsch2pcb' correctly handles footprint names with hyphens (`-').

* `gsch2pcb' project files support quoting and escaping in
  `schematics' entries.