@@ -218,6 +218,12 @@ README for utilities
     garchive requires python to run.  
     Run:  garchive -h  for help information.
  
+    
+    schdiff
+    Alan Somers
+    This script is used to produce graphical diffs of gschem files.  It 
+    integrates with Git, Mercurial, and Subversion.  It requires ImageMagick
+    to run.  Run schdiff -h for usage instructions.
 
 - License  
 
