@@ -15,7 +15,7 @@ else
 	@echo 'The documentation cannot be built from the sources.'
 endif
 
-dist_man_MANS = gsch2pcb.1 grenum.1 gxyrs.1 refdes_renum.1
+dist_man_MANS = gsch2pcb.1 grenum.1 gxyrs.1 refdes_renum.1 schdiff.1
 
 
 # Rules for converting man->html
