@@ -4,12 +4,12 @@
 
 bin_SCRIPTS = sarlacc_sym gschupdate gsymupdate refdes_renum \
 	      tragesym pads_backannotate pcb_backannotate garchive gsymfix.pl \
-	      gnet_hier_verilog.sh
+	      gnet_hier_verilog.sh schdiff
 
 EXTRA_DIST = convert_sym.awk gpstoimage mk_char_tab.pl \
 	     sarlacc_sym gschupdate gsymupdate refdes_renum gsymfix.pl \
 	     tragesym pads_backannotate pcb_backannotate garchive.py \
-	     gnet_hier_verilog.sh
+	     gnet_hier_verilog.sh schdiff
 
 ##  SDB's stuff to enable garchive.  This hardcodes the path to the
 ##  system libraries into garchive prior to installation.
