@@ -1,0 +1,64 @@
+#! /bin/sh
+
+usage ()
+{
+  echo Usage: 
+  echo \\tschdiff firstfile secondfile
+  echo \\tView a graphical diff of gschem schematics
+  echo
+  echo \\tTo use with git, just place this script in your PATH and do
+  echo \\tgit difftool -x schdiff ...
+  echo
+  echo \\tTo use with mercurial, add the following lines to your .hgrc:
+  echo \\t\\t[extensions]
+  echo \\t\\thgext.extdiff =
+  echo \\t\\t[extdiff]
+  echo \\t\\tcmd.schdiff = /PATH/TO/schdiff
+  echo \\tthen to invoke it, do
+  echo \\thg schdiff ...
+  echo
+  echo \\tTo use with subversion, place it in your PATH and do
+  echo \\tsvn diff --diff-cmd schdiff ...
+
+  echo \\tRequirements: Imagemagick and gschem be installed
+}
+
+for PROG in gschem composite display
+do
+  if which $PROG > /dev/null
+  then 
+    true
+  else 
+    echo "$PROG is not found.  Either it is not installed, or not in your PATH"
+    exit 1
+  fi
+done
+
+if test $# -lt 2
+  then usage; exit 1
+fi
+
+#In case the script was invoked with extra option arguments, throw them away
+shift `expr $# - 2`
+
+if test -d $1 -o -d $2
+  then echo "ERROR: schdiff cannot diff entire directories"
+  exit 1
+fi
+
+LEFTFILE=$1
+RIGHTFILE=$2
+
+GEDASCHEMEDIR=share/gEDA/scheme
+SCHEMEFILE=`dirname $0`/../${GEDASCHEMEDIR}/schdiff-image.scm
+LEFTPNG=`mktemp --tmpdir schdiff.XXXXXXXXXX`
+RIGHTPNG=`mktemp --tmpdir schdiff.XXXXXXXXXX`
+DIFFPNG=`mktemp --tmpdir schdiff.XXXXXXXXXX`
+
+gschem -p -o $LEFTPNG -q -c '(image-size 1344 1008) (image-color "disabled") (gschem-use-rc-values) (gschem-image "dummyfilename") (gschem-exit)' $LEFTFILE && \
+gschem -p -o $RIGHTPNG -q -c '(image-size 1344 1008) (image-color "disabled") (gschem-use-rc-values) (gschem-image "dummyfilename") (gschem-exit)' $RIGHTFILE && \
+composite -stereo 0 $LEFTPNG $RIGHTPNG $DIFFPNG && \
+display $DIFFPNG
+rm $LEFTPNG
+rm $RIGHTPNG
+rm $DIFFPNG
